--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <p class="text-lg italic text-gray-700 mb-6">
                         "Sobrang dali ng process! In just a few clicks, covered na ako. Malaking tulong ito para sa peace of mind ng family ko."
                     </p>
-                    <p class="font-semibold text-orange-600">- Maria Clara S.</p>
+                    <p class="font-semibold text-orange-600">- Mark P., Business Owner</p>
                     <p class="text-sm text-gray-500">Quezon City</p>
                 </div>
                 <!-- Testimonial 2 -->
@@ -335,7 +335,7 @@
                     <p class="text-lg italic text-gray-700 mb-6">
                         "Ang ganda ng benefits, lalo na yung money back feature! Feeling ko, investment din ito sa health ko. Highly recommended!"
                     </p>
-                    <p class="font-semibold text-orange-600">- Jose Rizal M.</p>
+                    <p class="font-semibold text-orange-600">- John Henry V., Seafarer</p>
                     <p class="text-sm text-gray-500">Davao City</p>
                 </div>
                 <!-- Testimonial 3 -->
@@ -343,7 +343,7 @@
                     <p class="text-lg italic text-gray-700 mb-6">
                         "Napakasimple intindihin ng plan. Hindi complicated. Plus, yung customer support nila, very responsive. Salamat, Digital Set For Health!"
                     </p>
-                    <p class="font-semibold text-orange-600">- Gabriela S.</p>
+                    <p class="font-semibold text-orange-600">- Gab M., Virtual Assistant</p>
                     <p class="text-sm text-gray-500">Cebu City</p>
                 </div>
             </div>
